# CAD_UAV_PROJECT

CAD_UAV/Command_centor/: CMakeLists.txt  package.xml
CAD_UAV/Command_centor/src/: receive_command.cpp  send_command.cpp
CAD_UAV/Command_centor/srv/: DockSafetyService.srv
CAD_UAV/FAC_MAV/: CMakeLists.txt  package.xml
CAD_UAV/FAC_MAV/bag/: .swp
CAD_UAV/FAC_MAV/include/: .cad_uav_controller.hpp.swn  .cad_uav_controller.hpp.swo  .cad_uav_controller.hpp.swp  cad_uav_controller.hpp  cad_uav_controller_23-10-18.hpp  cad_uav_util_function.hpp
CAD_UAV/FAC_MAV/launch/: cad_uav_norm_launcher.launch
CAD_UAV/FAC_MAV/src/: FAC_MAV_ctrler.cpp  cad_norm_version.cpp
CAD_UAV/receive_from_zigbee/: CMakeLists.txt  package.xml
CAD_UAV/receive_from_zigbee/src/: .serial_zigbee_node.cpp.swp  serial_zigbee_node.cpp
CAD_UAV/serial_module/: CMakeLists.txt
CAD_UAV/setting_tf2_opti/: CMakeLists.txt  package.xml
cad_uav/: CMakeLists.txt  package.xml
cad_uav/include/: cad_norm_version.hpp  cad_norm_version_class.hpp  cad_uav_controller.hpp  cad_uav_controller_2.hpp  cad_uav_util_function.hpp  cad_util_function.hpp
cad_uav/launch/: cad_project_launcher.launch
cad_uav/src/: cad_norm_main_old.cpp  cad_norm_version.cpp  cad_norm_version_2.cpp  cad_norm_version_class.cpp
data_logging/src/: data_logging.cpp  data_logging_sub.cpp
serial_module/: CMakeLists.txt
serial_module/src/: serial_magnetic_node.cpp  serial_magnetic_sub_new_node.cpp  serial_magnetic_sub_node.cpp
src/cad_uav_/: code_tree.txt
src/cad_uav_/include/: cad_main.hpp
switch_code_/: switch_code_.ino
(+17 files in other folders)
